--- a/express-file-upload/done/package.json
+++ b/express-file-upload/done/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
+    "file-type": "^15.0.1",
     "knex": "^0.21.1",
     "sqlite3": "^4.2.0"
   }
