--- a/express-google-oauth2/done/package.json
+++ b/express-google-oauth2/done/package.json
@@ -9,9 +9,9 @@
   "author": "vuka",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
